# p6-schedule-toolkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: test.yml
docs/: csv-format.md  scheduling-guide.md  troubleshooting.md  xer-format.md
examples/: wind_farm_12turbines.csv
skills/: p6-results-reader.md  p6-schedule-generator.md
src/p6_schedule/: __init__.py  cli.py  cpm_scheduler.py  csv_to_xer.py  deploy.py  read_results.py  validate.py
tests/: test_cpm.py  test_csv_to_xer.py  test_validate.py
